--- a/opengl_course/opengl_course.vcxproj.filters
+++ b/opengl_course/opengl_course.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\shader_util.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\fragment_core.glsl" />
     <None Include="assets\vertex_core.glsl" />
+    <None Include="assets\fragment_core2.glsl" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\shader_util.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
