--- a/opengl_course/opengl_course.vcxproj.filters
+++ b/opengl_course/opengl_course.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\shader_util.cpp">
+    <ClCompile Include="src\shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -31,7 +31,7 @@
     <None Include="assets\fragment_core2.glsl" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\shader_util.h">
+    <ClInclude Include="src\shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
