Mouse, Keyboard, Joystick IO implemented.

--- a/opengl_course/opengl_course.vcxproj
+++ b/opengl_course/opengl_course.vcxproj
@@ -21,6 +21,9 @@
   <ItemGroup>
     <ClCompile Include="lib\stb.cpp" />
     <ClCompile Include="src\glad.c" />
+    <ClCompile Include="src\io\joystick.cpp" />
+    <ClCompile Include="src\io\keyboard.cpp" />
+    <ClCompile Include="src\io\mouse.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\shader.cpp" />
   </ItemGroup>
@@ -30,6 +33,9 @@
     <None Include="assets\vertex_core.glsl" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\io\joystick.h" />
+    <ClInclude Include="src\io\keyboard.h" />
+    <ClInclude Include="src\io\mouse.h" />
     <ClInclude Include="src\shader.h" />
   </ItemGroup>
   <ItemGroup>
