Texture loading bug fixed!

--- a/opengl_course/opengl_course.vcxproj
+++ b/opengl_course/opengl_course.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="lib\stb.cpp" />
     <ClCompile Include="src\glad.c" />
+    <ClCompile Include="src\graphics\texture.cpp" />
     <ClCompile Include="src\io\camera.cpp" />
     <ClCompile Include="src\io\joystick.cpp" />
     <ClCompile Include="src\io\keyboard.cpp" />
@@ -34,6 +35,7 @@
     <None Include="assets\object.vs" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\graphics\texture.h" />
     <ClInclude Include="src\io\camera.h" />
     <ClInclude Include="src\io\joystick.h" />
     <ClInclude Include="src\io\keyboard.h" />
@@ -42,7 +44,9 @@
     <ClInclude Include="src\io\screen.h" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="assets\bg_texture.jfif" />
     <Image Include="assets\bg_texture.jpg" />
+    <Image Include="assets\black_hole.jpg" />
     <Image Include="assets\chungus.png" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
